# endfield-gacha

./: README.md  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/: FUNDING.yml
app/: app.vue
app/components/: AddAccount.vue  ColorMode.vue  GachaStatBody.vue  PieChart.vue  SelectAccount.vue
app/composables/: useExcelExport.ts  useGachaSync.ts  usePoolSelector.ts  useUpdate.ts  useUserStore.ts  useWebDav.ts
app/composables/gacha/: gachaApi.ts  index.ts  useGachaAuth.ts  useGachaPoolInfo.ts  useGachaRecords.ts  useGachaStatistics.ts
app/pages/: index.vue  setting.vue  weapon.vue
app/types/: gacha.d.ts
app/utils/: gachaCalc.ts  systemAccount.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  webdav.rs
